testsuite/tests/typing-layouts-float64/unboxed_floats_disabled.compilers.reference
File "unboxed_floats.ml", line 76, characters 11-16:
76 |   let pi = #3.14 in
                ^^^^^
Error: This construct requires the stable version of the extension "layouts", which is disabled and cannot be used
